--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
       <button type="submit">Search</button>
     </form>
 
-    <div class="gallery"></div>
+    <div id="loader" class="loader" style="display: none"></div>
+    <ul class="gallery"></ul>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
